--- a/server/package.json
+++ b/server/package.json
@@ -32,32 +32,36 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "config": "^3.1.0",
+    "config": "^3.2.2",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
-    "ejs": "^2.6.1",
+    "ejs": "^2.6.2",
     "express": "^4.17.0",
-    "express-validator": "^5.3.1",
+    "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
-    "helmet": "^3.18.0",
+    "helmet": "^3.19.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.4",
-    "mongoose": "^5.5.9",
+    "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.0",
-    "stripe": "^7.1.0",
+    "stripe": "^7.4.0",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "husky": "^2.3.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^2.7.0",
     "nodemon": "^1.19.0",
     "prettier": "^1.17.1"
   }
